Change explorer to nautilus

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,7 +10,7 @@ source = ./colors.conf
 
 $menu_paste = ~/.config/scripts/paste_menu.sh
 $term = foot
-$filebrowser = thunar
+$filebrowser = nautilus
 $webbrowser = brave --gtk-version=4 --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime --enable-features=WaylandWindowDecorations
 $volume = ~/.config/scripts/volume.sh
 $brightness = ~/.config/scripts/brightness.sh
@@ -67,7 +67,7 @@ env = QT_IM_MODULE,$im_platform
 env = SDL_IM_MODULE,$im_platform
 env = XMODIFIERS,@im=$im_platform
 env = SCRATCHPAD_NAME,$scratchpad_name
-env = GTK_THEME,Adwaita:dark
+env = GTK_THEME,Adwaita-dark
 env = HYPRCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,Banana
 env = MOZ_ENABLE_WAYLAND , 1 # ensure enable wayland for Firefox
