--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -67,7 +67,8 @@ env = QT_IM_MODULE,$im_platform
 env = SDL_IM_MODULE,$im_platform
 env = XMODIFIERS,@im=$im_platform
 env = SCRATCHPAD_NAME,$scratchpad_name
-env = GTK_THEME,Adwaita-dark
+# env = GTK_THEME,Adwaita-dark
+env = GTK_THEME,Adwaita
 env = HYPRCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,Banana
 env = MOZ_ENABLE_WAYLAND , 1 # ensure enable wayland for Firefox
@@ -253,91 +254,91 @@ submap = reset
 # bindr=,          swipe:4:u, submap, resize
 bind = SUPER, W,         submap, resize
 submap = resize
-    bind =,         W,      cyclenext, 
-    bind =,         W,      bringactivetotop, 
-    bind =,         W,      submap, reset
+bind =,         W,      cyclenext, 
+bind =,         W,      bringactivetotop, 
+bind =,         W,      submap, reset
 
-    bind = SHIFT,   W,      cyclenext, prev
-    bind = SHIFT,   W,      bringactivetotop, 
-    bind = SHIFT,   W,      submap, reset
+bind = SHIFT,   W,      cyclenext, prev
+bind = SHIFT,   W,      bringactivetotop, 
+bind = SHIFT,   W,      submap, reset
 
-    bind = SUPER,   Q,      exec, $selective_kill
-    bind = SUPER,   Q,      submap, reset
+bind = SUPER,   Q,      exec, $selective_kill
+bind = SUPER,   Q,      submap, reset
 
-    bind =,         Q,      exec, $selective_kill
-    bind =,         Q,      submap, reset
+bind =,         Q,      exec, $selective_kill
+bind =,         Q,      submap, reset
 
-    bind = SHIFT,   Q,      killactive, 
-    bind = SHIFT,   Q,      submap, reset
+bind = SHIFT,   Q,      killactive, 
+bind = SHIFT,   Q,      submap, reset
 
-    bind = SHIFT,   F,      fullscreen, 0
-    bind = SHIFT,   F,      submap, reset
-    bind =,         F,      fullscreen, 1
-    bind =,         F,      submap, reset
+bind = SHIFT,   F,      fullscreen, 0
+bind = SHIFT,   F,      submap, reset
+bind =,         F,      fullscreen, 1
+bind =,         F,      submap, reset
 
-    bind =,         Space,  togglefloating, 
-    bind =,         Space,  centerwindow, 
-    bind =,         Space,  submap, reset
+bind =,         Space,  togglefloating, 
+bind =,         Space,  centerwindow, 
+bind =,         Space,  submap, reset
 
-    bind =,         C,      centerwindow, 
-    bind =,         C,      submap, reset
+bind =,         C,      centerwindow, 
+bind =,         C,      submap, reset
 
-    bind =,         Tab,    togglesplit, 
-    bind =,         h,      movefocus, l
-    bind =,         l,      movefocus, r
-    bind =,         k,      movefocus, u
-    bind =,         j,      movefocus, d
+bind =,         Tab,    togglesplit, 
+bind =,         h,      movefocus, l
+bind =,         l,      movefocus, r
+bind =,         k,      movefocus, u
+bind =,         j,      movefocus, d
 
-    bind = SHIFT,   h,      movewindow,   l
-    bind = SHIFT,   l,      movewindow,   r
-    bind = SHIFT,   k,      movewindow,   u
-    bind = SHIFT,   j,      movewindow,   d
-    bind =, swipe:3:l,      movewindow,   l
-    bind =, swipe:3:r,      movewindow,   r
-    bind =, swipe:3:u,      movewindow,   u
-    bind =, swipe:3:d,      movewindow,   d
+bind = SHIFT,   h,      movewindow,   l
+bind = SHIFT,   l,      movewindow,   r
+bind = SHIFT,   k,      movewindow,   u
+bind = SHIFT,   j,      movewindow,   d
+bind =, swipe:3:l,      movewindow,   l
+bind =, swipe:3:r,      movewindow,   r
+bind =, swipe:3:u,      movewindow,   u
+bind =, swipe:3:d,      movewindow,   d
 
-    binde = CONTROL, h,      resizeactive, -10 0
-    binde = CONTROL, l,      resizeactive, 10 0
-    binde = CONTROL, k,      resizeactive, 0 -10
-    binde = CONTROL, j,      resizeactive, 0 10
+binde = CONTROL, h,      resizeactive, -10 0
+binde = CONTROL, l,      resizeactive, 10 0
+binde = CONTROL, k,      resizeactive, 0 -10
+binde = CONTROL, j,      resizeactive, 0 10
 
-    bind =,         1,      workspace, 1
-    bind =,         2,      workspace, 2
-    bind =,         3,      workspace, 3
-    bind =,         4,      workspace, 4
-    bind =,         5,      workspace, 5
-    bind =,         6,      workspace, 6
-    bind =,         7,      workspace, 7
-    bind =,         8,      workspace, 8
-    bind =,         9,      workspace, 9
-    bind =,         Comma,  workspace, r-1
-    bind =,         Period, workspace, r+1
-    bind = SHIFT,   1,      movetoworkspacesilent, 1
-    bind = SHIFT,   2,      movetoworkspacesilent, 2
-    bind = SHIFT,   3,      movetoworkspacesilent, 3
-    bind = SHIFT,   4,      movetoworkspacesilent, 4
-    bind = SHIFT,   5,      movetoworkspacesilent, 5
-    bind = SHIFT,   6,      movetoworkspacesilent, 6
-    bind = SHIFT,   7,      movetoworkspacesilent, 7
-    bind = SHIFT,   8,      movetoworkspacesilent, 8
-    bind = SHIFT,   9,      movetoworkspacesilent, 9
-    bind = SHIFT,   Comma,  movetoworkspacesilent, r-1
-    bind = SHIFT,   Period, movetoworkspacesilent, r+1
+bind =,         1,      workspace, 1
+bind =,         2,      workspace, 2
+bind =,         3,      workspace, 3
+bind =,         4,      workspace, 4
+bind =,         5,      workspace, 5
+bind =,         6,      workspace, 6
+bind =,         7,      workspace, 7
+bind =,         8,      workspace, 8
+bind =,         9,      workspace, 9
+bind =,         Comma,  workspace, r-1
+bind =,         Period, workspace, r+1
+bind = SHIFT,   1,      movetoworkspacesilent, 1
+bind = SHIFT,   2,      movetoworkspacesilent, 2
+bind = SHIFT,   3,      movetoworkspacesilent, 3
+bind = SHIFT,   4,      movetoworkspacesilent, 4
+bind = SHIFT,   5,      movetoworkspacesilent, 5
+bind = SHIFT,   6,      movetoworkspacesilent, 6
+bind = SHIFT,   7,      movetoworkspacesilent, 7
+bind = SHIFT,   8,      movetoworkspacesilent, 8
+bind = SHIFT,   9,      movetoworkspacesilent, 9
+bind = SHIFT,   Comma,  movetoworkspacesilent, r-1
+bind = SHIFT,   Period, movetoworkspacesilent, r+1
 
-    bindm=,         mouse:272,   movewindow
-    bindm=,         mouse:273,   resizeactive
-    bindm=,         longpress:1, movewindow
-    bindm=,         longpress:2, resizeactive
-    bind =,         tap:3,       togglefloating, 
-    #bind =,         tap:4,       submap,         reset
-    bindr = SHIFT, 0, movetoworkspacesilent, special:$scratchpad_name
-    bindr =,       0, exec, ~/.config/scripts/swap_scratchpad.sh
+bindm=,         mouse:272,   movewindow
+bindm=,         mouse:273,   resizeactive
+bindm=,         longpress:1, movewindow
+bindm=,         longpress:2, resizeactive
+bind =,         tap:3,       togglefloating, 
+#bind =,         tap:4,       submap,         reset
+bindr = SHIFT, 0, movetoworkspacesilent, special:$scratchpad_name
+bindr =,       0, exec, ~/.config/scripts/swap_scratchpad.sh
 
-    bind =,          Escape, submap, reset
-    bind = SUPER, W,      submap, reset
+bind =,          Escape, submap, reset
+bind = SUPER, W,      submap, reset
 
-    bind = , catchall, exec, hyprctl notify 4 2000 "rgb($color3)" " Unknown keymap!"
+bind = , catchall, exec, hyprctl notify 4 2000 "rgb($color3)" " Unknown keymap!"
 submap = reset
 
 # WORKSPACE AND WINDOWS
@@ -370,6 +371,8 @@ bindr= SUPER SHIFT, 0, movetoworkspacesilent, special:$scratchpad_name
 bind = SUPER SHIFT, Comma, movetoworkspacesilent, r-1
 bind = SUPER SHIFT, Period, movetoworkspacesilent, r+1
 
+bind = SUPER, grave, exec, hyprpicker
+
 bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizeactive
 bindm = SUPER, longpress:2, movewindow
@@ -384,17 +387,28 @@ gestures {
     workspace_swipe_cancel_ratio = 0.1
 }
 
-plugin {
-    touch_gestures {
-        sensitivity = 5.0
-        long_press_delay = 1000
-        # must be >= 3
-        workspace_swipe_fingers = 4
-        experimental {
-            send_cancel = 0
-        }
+plugin.touch_gestures {
+    sensitivity = 5.0
+    long_press_delay = 1000
+    # must be >= 3
+    workspace_swipe_fingers = 4
+    experimental {
+        send_cancel = 0
     }
 }
+
+plugin.hyprexpo {
+    columns = 3
+    gap_size = 10
+    bg_col = rgb(111111)
+    workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
+
+    enable_gesture = true # laptop touchpad
+    gesture_fingers = 3  # 3 or 4
+    gesture_distance = 300 # how far is the "max"
+    gesture_positive = false # positive = swipe down. Negative = swipe up.
+}
+
 
 # animations {
 #     enabled = false
