--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -8,8 +8,8 @@
 # title=foot
 # locked-title=no
 
-# include=~/.config/foot/colors.ini
-# font=JetBrainsMono Nerd Font Mono:size=12
+include=~/.config/foot/colors.ini
+font=JetBrainsMono Nerd Font Mono:size=12
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -50,7 +50,7 @@
 # indicator-format=
 
 [url]
-# launch=gio launch ${url}
+launch=xdg-open ${url}
 # label-letters=sadfjklewcmpgh
 # osc8-underline=url-mode
 # protocols=http, https, ftp, ftps, file, gemini, gopher
