--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ $scratchpad_name = 󰉇
 # DISPLAY
 
 monitor = eDP-1, 3000x2000@60, 0x0, 2
-monitor = DP-3, preferred, -1920x0, 1
+monitor = DP-3, preferred, 0x-1080, 1
 monitor =, preferred,auto,auto
 
 # STARTUP
@@ -159,7 +159,8 @@ $spd_opacity = 0.9
 windowrule = opacity $spd_opacity, ^(foot)$
 windowrule = opacity $spd_opacity, ^(org.pwmt.zathura)$
 
-windowrule = pseudo, fcitx
+windowrule = pseudo, fcitxfcit
+windowrule = float, fcitxfcit
 
 windowrule = float,                 ^(wofi)$
 windowrule = dimaround,             ^(wofi)$
