Switch wofi to walker

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -42,6 +42,7 @@ exec-once = ~/.config/scripts/hyprland-plugin-script_2.sh
 exec-once = hypridle
 exec-once = swaybg -i Pictures/Wallpaper/wallhaven-5g8r55.jpg  
 exec-once = waybar
+exec-once = walker --gapplication-service
 exec-once = iio-hyprland
 exec-once = lxqt-policykit-agent
 exec-once = wl-paste --watch cliphist store
@@ -159,8 +160,9 @@ $spd_opacity = 0.9
 windowrule = opacity $spd_opacity, ^(foot)$
 windowrule = opacity $spd_opacity, ^(org.pwmt.zathura)$
 
-windowrule = pseudo, fcitxfcit
-windowrule = float, fcitxfcit
+windowrulev2 = pseudo, class:fcitxfcit
+windowrulev2 = center, class:fcitxfcit
+windowrulev2 = float,  class:fcitxfcit
 
 windowrule = float,                 ^(wofi)$
 windowrule = dimaround,             ^(wofi)$
