Update modules to not include binja

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,6 @@
 .config/Thunar/accels.scm
 .config/fcitx5/conf/cached_layouts
 .config/zsh/oh-my-posh-config.json.bak
-# .config/nixos/modules/nixvim-config
-# .config/nixos/modules/binja
+.config/nixos/modules/nixvim-config
+.config/nixos/modules/binja
 
