Make picker paste value to clipboard

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -373,7 +373,7 @@ bindr= SUPER SHIFT, 0, movetoworkspacesilent, special:$scratchpad_name
 bind = SUPER SHIFT, Comma, movetoworkspacesilent, r-1
 bind = SUPER SHIFT, Period, movetoworkspacesilent, r+1
 
-bind = SUPER, grave, exec, hyprpicker
+bind = SUPER, grave, exec, hyprpicker | wl-copy
 
 bindm = SUPER, mouse:272, movewindow
 bindm = SUPER, mouse:273, resizeactive
