--- a/.config/foot/colors.ini
+++ b/.config/foot/colors.ini
@@ -1,32 +1,31 @@
+
+# tinted-foot
+# Scheme name: Oxocarbon Dark
+# Scheme author: shaunsingh/IBM
+# Template author: Tinted Theming (https://github.com/tinted-theming)
+
 [colors]
-# alpha=1 | 0
-background=16181A
-foreground=FFFFFF
-
-## Normal/regular colors (color palette 0-7)
-regular0=16181A  # black
-regular1=FF6E5E  # red
-regular2=5EFF6C  # green
-regular3=F1FF5E  # yellow
-regular4=5EA1FF  # blue
-regular5=BD5EFF  # magenta
-regular6=5EF1FF  # cyan
-regular7=FFFFFF  # white
-
-## Bright colors (color palette 8-15)
-bright0=3C4048   # bright black
-bright1=FF6E5E   # bright red
-bright2=5EFF6C   # bright green
-bright3=F1FF5E   # bright yellow
-bright4=5EA1FF   # bright blue
-bright5=BD5EFF   # bright magenta
-bright6=5EF1FF   # bright cyan
-bright7=FFFFFF   # bright white
-
-
-## Misc colors
-selection-foreground=16181A
-selection-background=FFFFFF
-urls=00a8ba
-
-# vim: ft=dosini
+foreground=f2f4f8
+background=161616
+regular0=262626 # black
+regular1=3ddbd9 # red
+regular2=33b1ff # green
+regular3=ee5396 # yellow
+regular4=42be65 # blue
+regular5=be95ff # magenta
+regular6=ff7eb6 # cyan
+regular7=ffffff # white
+bright0=393939 # bright black
+bright1=3ddbd9 # bright red
+bright2=33b1ff # bright green
+bright3=ee5396 # bright yellow
+bright4=42be65 # bright blue
+bright5=be95ff # bright magenta
+bright6=ff7eb6 # bright cyan
+bright7=08bdba # bright white
+16=78a9ff
+17=82cfff
+18=262626
+19=393939
+20=dde1e6
+21=ffffff
