--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -68,7 +68,8 @@ env = SDL_IM_MODULE,$im_platform
 env = XMODIFIERS,@im=$im_platform
 env = SCRATCHPAD_NAME,$scratchpad_name
 # env = GTK_THEME,Adwaita-dark
-env = GTK_THEME,Adwaita
+# env = GTK_THEME,Adwaita
+env = GTK_THEME,FlatColor
 env = HYPRCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,Banana
 env = MOZ_ENABLE_WAYLAND , 1 # ensure enable wayland for Firefox
@@ -133,8 +134,8 @@ general {
     gaps_in = 2.5
     gaps_out = 5
     border_size = 2
-    col.active_border = rgba($color2DD)
-    col.inactive_border = rgba($color6DD)
+    col.active_border = rgba($color6DD)
+    col.inactive_border = rgba($color2DD)
     layout = dwindle
     resize_on_border = true
 }
@@ -150,8 +151,8 @@ plugin:overview {
     workspaceActiveBorder = rgba($color1FF)
 }
 
-windowrulev2 = bordercolor rgba($color1DD),fullscreen:1
-windowrulev2 = bordercolor rgba($color5DD),floating:1
+windowrulev2 = bordercolor rgba($color10DD),fullscreen:1
+windowrulev2 = bordercolor rgba($color15DD),floating:1
 
 # WINDOW RULES
 
