--- a/.config/flavours/config.toml
+++ b/.config/flavours/config.toml
@@ -1,37 +1,43 @@
-[[items]]
-template = "hyprland"
-file = "~/.config/hypr/colors.conf"
-rewrite = true
-
-[[item]]
-file = "~/.config/waybar/colors.css"
-template = "waybar"
-hook = "pkill -SIGRTMIN+7 waybar"
-rewrite = true
-
-[[items]]
-template = "zathura"
-file = "~/.config/zathura/zathura-color"
-rewrite = true
-
-[[items]]
-template = "dunst"
-file = "~/.config/dunst/dunstrc-colors"
-rewrite = true
-
-[[items]]
-template = "foot"
-file = "~/.config/foot/colors.ini"
-rewrite = true
-
+# [[items]]
+# template = "hyprland"
+# file = "~/.config/hypr/colors.conf"
+# rewrite = true
+# 
+# [[item]]
+# file = "~/.config/waybar/colors.css"
+# template = "waybar"
+# hook = "pkill -SIGRTMIN+7 waybar"
+# rewrite = true
+# 
+# [[items]]
+# template = "zathura"
+# file = "~/.config/zathura/zathura-color"
+# rewrite = true
+# 
+# [[items]]
+# template = "dunst"
+# file = "~/.config/dunst/dunstrc-colors"
+# rewrite = true
+# 
+# [[items]]
+# template = "foot"
+# file = "~/.config/foot/colors.ini"
+# rewrite = true
+# 
 [[item]]
 file = "~/.themes/FlatColor/colors3"
-template = "gtk-flatcolor"
+template = "base16-gtk-flatcolor"
 subtemplate = "gtk-3"
 rewrite = true
 hook = "gsettings set org.gnome.desktop.interface gtk-theme dummy && gsettings set org.gnome.desktop.interface gtk-theme FlatColor"
 
 [[item]]
-file = "~/.config/spicetify/Themes/base16/color.ini"
-template = "spotify"
+file = "~/.themes/FlatColor/colors2"
+template = "base16-gtk-flatcolor"
+subtemplate = "gtk-2"
 rewrite = true
+# 
+# [[item]]
+# file = "~/.config/spicetify/Themes/base16/color.ini"
+# template = "spotify"
+# rewrite = true
