Add gtk theming

--- a/.config/flavours/config.toml
+++ b/.config/flavours/config.toml
@@ -26,14 +26,14 @@
 # 
 [[item]]
 file = "~/.themes/FlatColor/colors3"
-template = "base16-gtk-flatcolor"
+template = "gtk-flatcolor"
 subtemplate = "gtk-3"
 rewrite = true
 hook = "gsettings set org.gnome.desktop.interface gtk-theme dummy && gsettings set org.gnome.desktop.interface gtk-theme FlatColor"
 
 [[item]]
 file = "~/.themes/FlatColor/colors2"
-template = "base16-gtk-flatcolor"
+template = "gtk-flatcolor"
 subtemplate = "gtk-2"
 rewrite = true
 # 
