--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule ".config/nixos/modules/wkeys"]
 	path = .config/nixos/modules/wkeys
 	url = https://github.com/yadobler/wkeys
+[submodule ".themes/FlatColor"]
+	path = .themes/FlatColor
+	url = https://github.com/jasperro/FlatColor
