Change waybar colors

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,6 +8,7 @@ debug:disable_logs = false
 source = ./colors.conf
 # GLOBAL VARIABLES
 
+$wallpaper="/home/yukna/Dotfiles/.config/wallust/cyberdream.json"
 $menu_paste = ~/.config/scripts/paste_menu.sh
 $term = foot
 $filebrowser = nautilus
