Seperate color configs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,7 +24,7 @@ $printscr_savepath = ~/Pictures/Screenshots/$(date +'%Y%m%d-%H%M%S')
 $printscr_fullscreen = grim
 $printscr_open_swappy = tee $(echo $printscr_savepath)-original.png | swappy -f -
 
-$printscr_f = $printscr_fullscreen - | tee $(echo $printscr_savepath)-full.png | wl_copy; hyprctl notify 1 2500 "rgb($color1)" " Screenshot saved!"
+$printscr_f = $printscr_fullscreen - | tee $(echo $printscr_savepath)-full.png | wl_copy; hyprctl notify 1 2500 "rgb($color01)" " Screenshot saved!"
 $printscr_sf = $printscr_fullscreen - | $printscr_open_swappy
 $printscr_ss = grim -g "$(slurp)" - | $printscr_open_swappy
 $printscr_sw = grim -g "$(~/.config/scripts/print_window.sh)" - | $printscr_open_swappy
@@ -135,8 +135,8 @@ general {
     gaps_in = 2.5
     gaps_out = 5
     border_size = 2
-    col.active_border = rgba($color6DD)
-    col.inactive_border = rgba($color2DD)
+    col.active_border = rgba($color06DD)
+    col.inactive_border = rgba($color02DD)
     layout = dwindle
     resize_on_border = true
 }
@@ -149,11 +149,11 @@ plugin:overview {
     autoDrag = false
     switchOnDrop = true
     exitOnSwitch = true
-    workspaceActiveBorder = rgba($color1FF)
+    workspaceActiveBorder = rgba($color01FF)
 }
 
-windowrulev2 = bordercolor rgba($color10DD),fullscreen:1
-windowrulev2 = bordercolor rgba($color15DD),floating:1
+windowrulev2 = bordercolor rgba($color0ADD),fullscreen:1
+windowrulev2 = bordercolor rgba($color0FDD),floating:1
 
 # WINDOW RULES
 
@@ -342,7 +342,7 @@ bindr =,       0, exec, ~/.config/scripts/swap_scratchpad.sh
 bind =,          Escape, submap, reset
 bind = SUPER, W,      submap, reset
 
-bind = , catchall, exec, hyprctl notify 4 2000 "rgb($color3)" " Unknown keymap!"
+bind = , catchall, exec, hyprctl notify 4 2000 "rgb($color03)" " Unknown keymap!"
 submap = reset
 
 # WORKSPACE AND WINDOWS
