--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -13,7 +13,7 @@ input-field {
     dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
     dots_center = true
     dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
-    outer_color = rgb($color11)
+    outer_color = rgb($color08)
     inner_color = rgb($background)
     font_color = rgb($foreground)
     fade_on_empty = true
@@ -25,7 +25,7 @@ input-field {
     fail_color = rgb(204, 34, 34) # if authentication failed, changes outer_color and fail message color
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i> # can be set to empty
     fail_transition = 300 # transition time in ms between normal outer_color and fail_color
-    capslock_color = rgb($color13)
+    capslock_color = rgb($color0E)
     numlock_color = -1
     bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
     invert_numlock = false # change color if numlock is off
