--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -68,9 +68,9 @@ env = QT_IM_MODULE,$im_platform
 env = SDL_IM_MODULE,$im_platform
 env = XMODIFIERS,@im=$im_platform
 env = SCRATCHPAD_NAME,$scratchpad_name
-env = GTK_THEME,Adwaita-dark
+# env = GTK_THEME,Adwaita-dark
 # env = GTK_THEME,Adwaita
-# env = GTK_THEME,FlatColor
+env = GTK_THEME,generated
 env = HYPRCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,Banana
 env = MOZ_ENABLE_WAYLAND , 1 # ensure enable wayland for Firefox
