Add sounds to everything lol

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -85,6 +85,7 @@ env = XDG_CURRENT_DESKTOP,hyprland
 env = _JAVA_AWT_WM_NONREPARENTING,1
 
 exec-once = hyprctl dismissnotify
+exec-once = pw-play ~/.config/scripts/assets/oxp.wav
 
 input {
     kb_layout = us
