--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -24,10 +24,10 @@ font=JetBrainsMono Nerd Font Mono:size=12
 # initial-window-size-pixels=700x500  # Or,
 # initial-window-size-chars=<COLSxROWS>
 # initial-window-mode=windowed
-# pad=2x2                             # optionally append 'center'
+pad=10x10                             # optionally append 'center'
 # resize-delay-ms=100
 
-# notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
+notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 
 # bold-text-in-bright=no
 # word-delimiters=,│`|:"'()[]{}<>
