--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -190,7 +190,9 @@
             "window-rewrite": {
                 "^[ ]*$": "",
                 "foot": "",
+                "ghostty": "",
                 "thunar": "",
+                "nautilus": "",
                 "brave-calendar.google.com__calendar_u_1_r-Default":"",
                 "brave-mail.google.com__mail_u_.-Default": "",
                 "brave-web.whatsapp.com__-Default": "",
