Add ghosty theme

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,7 +10,7 @@ source = ./colors.conf
 
 $wallpaper="/home/yukna/Dotfiles/.config/wallust/cyberdream.json"
 $menu_paste = ~/.config/scripts/paste_menu.sh
-$term = foot
+$term = ghostty
 $filebrowser = nautilus
 $webbrowser = brave --gtk-version=4 --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime --enable-features=WaylandWindowDecorations
 $volume = ~/.config/scripts/volume.sh
