--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -52,7 +52,7 @@ exec-once = blueman-applet
 exec-once = rfkill block bluetooth
 exec-once = hyprctl setcursor Banana 24
 exec-once = ~/.config/scripts/start_ime.sh
-exec-once = pw-play ~/.config/scripts/assets/oxp.wav
+exec-once = sleep 5; pw-play ~/.config/scripts/assets/oxp.wav
 
 # exec-once = ~/.config/scripts/start_squeekboard.sh
 # exec-once = ~/.config/scripts/lisgd_touchscreen.sh
@@ -159,7 +159,7 @@ windowrulev2 = bordercolor rgba($color0FDD),floating:1
 # WINDOW RULES
 
 $spd_opacity = 0.9
-windowrule = opacity $spd_opacity, ^(foot)$
+# windowrule = opacity $spd_opacity, ^(com.mitchellh.ghostty)$
 windowrule = opacity $spd_opacity, ^(org.pwmt.zathura)$
 
 windowrulev2 = pseudo, class:fcitxfcit
