--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,8 +1,9 @@
-font-family = JetBrains Mono NF
+font-family = JetBrainsMono NFM
 window-padding-x = 2
 window-padding-y = 2
 window-padding-balance = true
 window-padding-color = background
 window-decoration = none
-
+resize-overlay = after-first
+resize-overlay-position = top-right
 config-file = "colors"
