--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -71,7 +71,7 @@ env = XMODIFIERS,@im=$im_platform
 env = SCRATCHPAD_NAME,$scratchpad_name
 # env = GTK_THEME,Adwaita-dark
 # env = GTK_THEME,Adwaita
-env = GTK_THEME,generated
+env = GTK_THEME,WhiteSur-Dark-solid
 env = HYPRCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,Banana
 env = MOZ_ENABLE_WAYLAND , 1 # ensure enable wayland for Firefox
