--- a/.config/xsettingsd/xsettingsd.conf
+++ b/.config/xsettingsd/xsettingsd.conf
@@ -1,5 +1,5 @@
-Net/ThemeName "FlatColor"
-Net/IconThemeName "MoreWaita"
+Net/ThemeName "WhiteSur-Dark-solid"
+Net/IconThemeName "WhiteSur-dark"
 Gtk/CursorThemeName "Banana"
 Net/EnableEventSounds 1
 EnableInputFeedbackSounds 0
