--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -3,6 +3,7 @@ general {
   lock_cmd = pidof hyprlock || hyprlock
   before_sleep_cmd = loginctl lock-session
   after_sleep_cmd = hyprctl dispatch dpms on; hyprctl reload
+  unlock_cmd = pw-play ~/.config/scripts/assets/oxp.wav
 }
 
 listener {
