--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -56,13 +56,13 @@ background {
     color = rgb($background)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
-    blur_passes = 0 # 0 disables blurring
-    blur_size = 7
-    noise = 0.0117
-    contrast = 0.8916
-    brightness = 0.8172
-    vibrancy = 0.1696
-    vibrancy_darkness = 0.0
+    # blur_passes = 0 # 0 disables blurring
+    # blur_size = 7
+    # noise = 0.0117
+    # contrast = 0.8916
+    # brightness = 0.8172
+    # vibrancy = 0.1696
+    # vibrancy_darkness = 0.0
 }
 
 
