--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -153,53 +153,53 @@ plugin:overview {
     workspaceActiveBorder = rgba($color01FF)
 }
 
-windowrulev2 = bordercolor rgba($color0ADD),fullscreen:1
-windowrulev2 = bordercolor rgba($color0FDD),floating:1
+windowrule = bordercolor rgba($color0ADD),fullscreen:1
+windowrule = bordercolor rgba($color0FDD),floating:1
 
 # WINDOW RULES
 
 $spd_opacity = 0.9
 # windowrule = opacity $spd_opacity, ^(com.mitchellh.ghostty)$
-windowrule = opacity $spd_opacity, ^(org.pwmt.zathura)$
+windowrule = opacity spd_opacity, class:org.pwmt.zathura
 
-windowrulev2 = pseudo, class:fcitxfcit
-windowrulev2 = center, class:fcitxfcit
-windowrulev2 = float,  class:fcitxfcit
+windowrule = pseudo, class:fcitxfcit
+windowrule = center, class:fcitxfcit
+windowrule = float,  class:fcitxfcit
 
-windowrule = float,                 ^(wofi)$
-windowrule = dimaround,             ^(wofi)$
-windowrule = center,                ^(wofi)$
-windowrule = noborder,              ^(wofi)$
+windowrule = float,                 class:wofi
+windowrule = dimaround,             class:wofi
+windowrule = center,                class:wofi
+windowrule = noborder,              class:wofi
 
-windowrule = float,                 ^(spotify)$
-windowrule = dimaround,             ^(spotify)$
-windowrule = center,                ^(spotify)$
+windowrule = float,                 class:spotify
+windowrule = dimaround,             class:spotify
+windowrule = center,                class:spotify
 
-windowrule = float,                 ^(brave-nngceckbapebfimnlniiiahkandclblb-Default)$
-windowrule = dimaround,             ^(brave-nngceckbapebfimnlniiiahkandclblb-Default)$
-windowrule = center,                ^(brave-nngceckbapebfimnlniiiahkandclblb-Default)$
+windowrule = float,                 class:brave-nngceckbapebfimnlniiiahkandclblb-Default
+windowrule = dimaround,             class:brave-nngceckbapebfimnlniiiahkandclblb-Default
+windowrule = center,                class:brave-nngceckbapebfimnlniiiahkandclblb-Default
 
-windowrule = float,                 ^(xdg-desktop-portal-gtk)$
-windowrule = dimaround,             ^(xdg-desktop-portal-gtk)$
-windowrule = center,                ^(xdg-desktop-portal-gtk)$
+windowrule = float,                 class:xdg-desktop-portal-gtk
+windowrule = dimaround,             class:xdg-desktop-portal-gtk
+windowrule = center,                class:xdg-desktop-portal-gtk
 
-windowrulev2 = float,                tag:scratchpad_window*
-windowrulev2 = size 70% 70%,         tag:scratchpad_window*
-windowrulev2 = opacity $spd_opacity, tag:scratchpad_window*
-windowrulev2 = center,               tag:scratchpad_window*
-windowrulev2 = dimaround,            tag:scratchpad_window*
+windowrule = float,                tag:scratchpad_window*
+windowrule = size 70% 70%,         tag:scratchpad_window*
+windowrule = opacity spd_opacity,  tag:scratchpad_window*
+windowrule = center,               tag:scratchpad_window*
+windowrule = dimaround,            tag:scratchpad_window*
 
-windowrule = tag +scratchpad_window, ^(org.telegram.desktop)$
-windowrule = tag +scratchpad_window, ^(TelegramDesktop)$
-windowrule = tag +scratchpad_window, ^(.telegram-desktop-wrapped)$
-windowrule = tag +scratchpad_window, ^(swayimg_)
-windowrule = tag +scratchpad_window, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
-windowrule = tag +scratchpad_window, ^(brave-mail.google.com__mail_u_.-Default)$
-windowrule = tag +scratchpad_window, ^(ncspot)$
-windowrule = tag +scratchpad_window, ^(brave-ticktick.com__webapp_-Default)$
-windowrule = tag +scratchpad_window, ^(brave-keep.google.com.+)$
-windowrule = tag +scratchpad_window, ^(brave-open.spotify.com.+)$
-windowrule = tag +scratchpad_window, ^(brave-web.whatsapp.com.+)$
+windowrule = tag +scratchpad_window, class:org.telegram.desktop
+windowrule = tag +scratchpad_window, class:TelegramDesktop
+windowrule = tag +scratchpad_window, class:.telegram-desktop-wrapped
+windowrule = tag +scratchpad_window, class:swayimg_
+windowrule = tag +scratchpad_window, class:brave-calendar.google.com__calendar_u_1_r-Default
+windowrule = tag +scratchpad_window, class:brave-mail.google.com__mail_u_.-Default
+windowrule = tag +scratchpad_window, class:ncspot
+windowrule = tag +scratchpad_window, class:brave-ticktick.com__webapp_-Default
+windowrule = tag +scratchpad_window, class:brave-keep.google.com.+
+windowrule = tag +scratchpad_window, class:brave-open.spotify.com.+
+windowrule = tag +scratchpad_window, class:brave-web.whatsapp.com.+
 
 
 # GLOBAL KEYS
